# stm32-libopencm3

./: CMakeLists.txt  README.md  openocd.cfg
cmake/: stm32f103.cmake  toolchain-arm-none-eabi-gcc.cmake
src/: blink.cpp
